<resources>
    <string name="app_name">Google Login</string>
    <string name="hide">Hide</string>
    <string name="enter_name">Enter Name</string>
    <string name="show">Show</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_the_password">Forget the Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
</resources>
