<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

    <ImageView
            android:id="@+id/ivMainImg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:contentDescription="@null"
            android:src="@drawable/vector_diamond_logo_yellow" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorGray"
                    android:hint="@string/enter_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorGray"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:minWidth="5dp"
                        android:paddingEnd="55dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                    android:id="@+id/tvInHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorWhite"
                    android:padding="10dp"
                    android:text="@string/show" />


        </RelativeLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button_purple"
            android:enabled="false"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorLightYellow" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <TextView

            android:id="@+id/tvForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forget_the_password" />

    <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorRed">

    </com.google.android.gms.common.SignInButton>

</LinearLayout>