<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

    <ImageView
            android:id="@+id/ivMainImg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:contentDescription="@null"
            android:src="@drawable/vector_diamond_logo_purple" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorGray"
                    android:hint="@string/enter_name"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorGray"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorGray"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:paddingEnd="55dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/tvInHide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorBlack"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/show"
                    android:textColor="@color/colorGray" />
        </RelativeLayout>
    </LinearLayout>

    <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button_yellow"
            android:enabled="false"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPurple" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

</LinearLayout>